--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vue-sweetalert": "^0.1.18",
+    "vue-sweetalert2": "^1.4.2",
     "vue-tables-2": "^1.4.62",
     "vueform": "^2.0.0",
     "vuelidate": "^0.7.4"
