--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
     "unit": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js --single-run",
-    "e2e": "node test/e2e/runner.js",
+    "e2e": "node test/e2e/runner.js",g
     "test": "npm run unit && npm run e2e",
     "lint": "eslint --ext .js,.vue src test/unit test/e2e/specs",
-    "build": "node build/build.js"
+    "build": "node build/build.js",
+    "custom-build":"npx webpack --config build/webpack.custom.prod.config.js"
   },
   "dependencies": {
     "axios": "^0.18.0",
